--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
             </select>
             <span>© 2024 Instagram from Meta</span>
         </div>
+        <p><strong>Disclaimer:</strong> This website is a project for educational purposes only. It is not affiliated with Instagram in any way. No user data is collected or stored.</p>
      </footer>
        
     
